--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
   <link rel="shortcut icon" href="./static/images/favicon_black.svg" media="(prefers-color-scheme:light)">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="./static/js/fontawesome.all.min.js"></script>
-  <script src="./static/js/bulma-carousel.min.js"></script>
-  <script src="./static/js/bulma-slider.min.js"></script>
-  <script src="./static/js/index.js"></script>
+  <script type="module" defer src="./static/js/fontawesome.all.min.js"></script>
+  <script type="module" src="./static/js/bulma-carousel.min.js"></script>
+  <script type="module" src="./static/js/bulma-slider.min.js"></script>
+  <script type="module" src="./static/js/index.js"></script>
   <script type="module" src="./static/js/three_main.js"></script>
 </head>
 <body>
