--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         content="Polyhedral Complex Derivation from Piecewise Trilinear Networks">
   <meta name="keywords" content="Polyhedral Complex, Neural Radiance Fields, 3D Mesh">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TropicalNeRF</title>
+  <title>Tropical NeRF</title>
   <script>
   </script>
 
@@ -154,7 +154,7 @@
       <div id="teaser1" class="column"></div>
     </div>
     <h2 class="subtitle has-text-centered">
-        Stanford Bunny and Dragon<br/>via our mesh extraction from InstantNGP (Müller et al., 2022)
+        Stanford Bunny and Dragon meshes by<br/>our analytical extraction from InstantNGP (Müller et al., 2022)
     </h2>
   </div>
 </section>
