--- a/src/index.html
+++ b/src/index.html
@@ -210,6 +210,9 @@
         <div class="has-text-centered">
           <div id="hypersurface" class="column"></div>
         </div>
+        <p>
+          The above interactive figure depicts a hypersurface \(\tau(\mathrm{x})=0\) where \(\tau(\mathrm{x_0})=\tau(\mathrm{x_7})=0\) with some curvature. The trilinear coefficients are \((0, 0.4 + \delta, 0.1 - \delta, 0.5, -0.5, -0.1, -0.4, 0)\) for the grid features \(P_{0 \dots 7}\), with a distortion of \(\delta = 1\).
+        </p>
       </div>
     </div>
 
@@ -231,6 +234,9 @@
         <div class="has-text-centered">
           <div id="hyperplane" class="column"></div>
         </div>
+        <p>
+          The above interactive figure depicts a hyperplane \(\tau(\mathrm{x})=0\) where \(\tau(\mathrm{x_0})=\tau(\mathrm{x_7})=0\) having no curvature. The trilinear coefficients for this hyperplane are \((0, 0.4, 0.1, 0.5, -0.5, -0.1, -0.4, 0)\) for the grid features \(P_{0 \dots 7}\) satisfying the planary condition.
+        </p>
         <br/>
         <article class="message is-info">
           <div class="message-header">
