Update References and Acks

--- a/src/index.html
+++ b/src/index.html
@@ -376,29 +376,35 @@
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Links</h2>
-
-        <!-- <div class="content has-text-justified">
-          <p>
-            There's a lot of excellent work that was introduced around the same time as ours.
-          </p>
-          <p>
-            <a href="https://arxiv.org/abs/2104.09125">Progressive Encoding for Neural Optimization</a> introduces an idea similar to our windowed position encoding for coarse-to-fine optimization.
-          </p>
-          <p>
-            <a href="https://www.albertpumarola.com/research/D-NeRF/index.html">D-NeRF</a> and <a href="https://gvv.mpi-inf.mpg.de/projects/nonrigid_nerf/">NR-NeRF</a>
-            both use deformation fields to model non-rigid scenes.
-          </p>
-          <p>
-            Some works model videos with a NeRF by directly modulating the density, such as <a href="https://video-nerf.github.io/">Video-NeRF</a>, <a href="https://www.cs.cornell.edu/~zl548/NSFF/">NSFF</a>, and <a href="https://neural-3d-video.github.io/">DyNeRF</a>
-          </p>
-          <p>
-            There are probably many more by the time you are reading this. Check out <a href="https://dellaert.github.io/NeRF/">Frank Dellart's survey on recent NeRF papers</a>, and <a href="https://github.com/yenchenlin/awesome-NeRF">Yen-Chen Lin's curated list of NeRF papers</a>.
-          </p>
+        <h2 class="title is-3">References</h2>
+        <div class="content has-text-justified">
+          <ul>
+            <li>
+              Berzins, A. (2023). Polyhedral complex extraction from relu networks using edge subdivision. In <i><a href="https://proceedings.mlr.press/v202/berzins23a.html">ICML</a></i>.
+            </li>
+            <li>
+              Humayun et al. (2023). SplineCam: Exact Visualization and Characterization of Deep Network Geometry and Decision Boundary. In <i><a href="https://imtiazhumayun.github.io/splinecam/">CVPR</a></i>.
+            </li>
+            <li>
+              Lei & Jia (2020). Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks. In <i><a href="https://proceedings.mlr.press/v119/lei20a.html">ICML</a></i>.
+          </ul>
         </div>
-      </div> -->
+      </div>
     </div>
     <!--/ Concurrent Work. -->
+
+    <!-- Acknowledgments -->
+    <div class="columns is-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Acknowledgments</h2>
+        <div class="content has-text-justified">
+          <p>
+            I would like to express my sincere appreciation to my brilliant colleagues, Sangdoo Yun, Dongyoon Han, and Injae Kim, for their contributions to this work. Their constructive feedback and guidance have been instrumental in shaping the work. The NAVER Smart Machine Learning (NSML) platform <span class="reference">(Kim et al., 2018)</span> had been used for experiments.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Acknowledgements -->
 
   </div>
 </section>
