Changed the title

--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@
 
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Main results</h2>
+        <h2 class="title is-3">Theory</h2>
         <article class="message is-info">
           <div class="message-header">
             <p>Theorem 4.5 (Hypersurface and eikonal constraint)</p>
