Update citation format

--- a/src/index.html
+++ b/src/index.html
@@ -380,13 +380,13 @@
         <div class="content has-text-justified">
           <ul>
             <li>
-              Berzins, A. (2023). Polyhedral complex extraction from relu networks using edge subdivision. In <i><a href="https://proceedings.mlr.press/v202/berzins23a.html">ICML</a></i>.
+              Berzins, A. (2023). <i>Polyhedral complex extraction from relu networks using edge subdivision.</i> <a href="https://proceedings.mlr.press/v202/berzins23a.html">ICML</a>.
             </li>
             <li>
-              Humayun et al. (2023). SplineCam: Exact Visualization and Characterization of Deep Network Geometry and Decision Boundary. In <i><a href="https://imtiazhumayun.github.io/splinecam/">CVPR</a></i>.
+              Humayun, A. et al. (2023). <i>SplineCam: Exact Visualization and Characterization of Deep Network Geometry and Decision Boundary.</i> <a href="https://imtiazhumayun.github.io/splinecam/">CVPR</a>.
             </li>
             <li>
-              Lei & Jia (2020). Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks. In <i><a href="https://proceedings.mlr.press/v119/lei20a.html">ICML</a></i>.
+              Lei, J., & Jia, K. (2020). <i>Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks.</i> <a href="https://proceedings.mlr.press/v119/lei20a.html">ICML</a>.
           </ul>
         </div>
       </div>
@@ -416,7 +416,7 @@
     <pre><code>@article{Kim2024tropical,
   author = {Kim, Jin-Hwa},
   title = {{Polyhedral Complex Derivation from Piecewise Trilinear Networks}},
-  url = {http://arxiv.org/abs/2402.10403},
+  journal = {arXiv preprint arXiv:2402.10403}
   year = {2024}
 }</code></pre>
   </div>
