--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Motivation</h2>
         <p>
-          Previous works assumed they extract meshes from Continuous Piecewise Affine (CPWA) functions. It implies that the functions have piecewise linearity, <i>i.e.</i>, ReLU neural networks. However, if you use trilinear interpolation for positional encoding, the networks are no longer linear <i>almost everywhere</i>. In a trilinear space, \( \tau \) projects a line to a curve except the lines on the grid. Notably, the diagonal line \( \mathrm{t} = (t,t,t)^\intercal \) where \( t \in [0, 1] \) is projected to a cubic Bézier curve <span class="reference">(<i>ref</i>. Proposition A.2)</span>. Note that the intersection of two curved hypersurfaces is not a line, even multiple curved lines can be found. Henceforth, Thales's theorem <span class="reference">(Section 3.4)</span> is no longer employed for identifying the point of intersection between a curved edge and a curved hypersurface. We deal with this problem in light of the discovery of flat constraints from the eikonal equation <span class="reference">(Theorem. 4.5)</span> and the analytical approximation <span class="reference">(Theorem. 4.7)</span>.
+          Previous works assumed they extract meshes from Continuous Piecewise Affine (CPWA) functions. It implies that the functions have piecewise linearity, <i>i.e.</i>, ReLU neural networks. However, if you use trilinear interpolation for positional encoding, the networks are no longer linear <i>almost everywhere</i>. In a trilinear space within a unit cubic grid, trilinear interpolation function \( \tau \) projects a line to a curve except the lines on the grid. Notably, the diagonal line \( \mathrm{t} = (t,t,t)^\intercal \) where \( t \in [0, 1] \) is projected to a cubic Bézier curve <span class="reference">(<i>ref</i>. Proposition A.2)</span>. Note that the intersection of two curved hypersurfaces is not a line, even multiple curved lines can be found. Henceforth, Thales's theorem <span class="reference">(Section 3.4)</span> is no longer employed for identifying the point of intersection between a curved edge and a curved hypersurface. We deal with this problem in light of the discovery of planary constraints from the eikonal equation <span class="reference">(Theorem. 4.5)</span> and the analytical approximation <span class="reference">(Theorem. 4.7)</span>.
         </p>
         <div class="has-text-centered">
           <div id="hypersurface" class="column"></div>
@@ -221,7 +221,7 @@
         <h2 class="title is-3">Overview</h2>
           <img src="static/images/overview.svg#svgView(viewBox(0,0,585,120))" width="100%"/>
           <p>
-            A schematic illustration of our mesh extraction algorithm. <span class="highlight-number">(1)</span> The first step involves finding sets of vertices and edges from the grid of positional embedding, where piecewise trilinear interpolation performs based on this grid. <span class="highlight-number">(2)</span> The curved edge subdivision is performed iterating over each neuron of MLP dealing with linear <span class="highlight-number">(2a)</span>, bilinear <span class="highlight-number">(2b)</span>, and trilinear <span class="highlight-number">(2c)</span> cases. The empty circles indicate new vertices, subdividing the corresponding edges. <span class="highlight-number">(3)</span> The skeletonization finds the vertices and edges consisting of the zero level-set, and <span class="highlight-number">(4)</span> the extracting faces perform sorting polygon vertices using face normals.
+            A schematic illustration of our mesh extraction algorithm. <span class="highlight-number">(1)</span> The first step involves finding sets of vertices and edges from the grid of positional embedding, where piecewise trilinear interpolation performs based on this grid. <span class="highlight-number">(2)</span> The curved edge subdivision is performed iterating over each neuron of MLP dealing with linear <span class="highlight-number">(2a)</span>, bilinear <span class="highlight-number">(2b)</span>, and trilinear <span class="highlight-number">(2c)</span> cases. These are schematic illustration: imagine that trilinear subdivision is occurred in the next iteration after initial 2a or 2b cases. The empty circles indicate new vertices, subdividing the corresponding edges. <span class="highlight-number">(3)</span> The skeletonization finds the vertices and edges consisting of the zero level-set, and <span class="highlight-number">(4)</span> the extracting faces perform sorting polygon vertices using face normals.
           </p>
       </div>
     </div>
@@ -276,112 +276,23 @@
         <p>
           <b><i>Proof sketch. </i></b> Theorem. 4.7 handles where the eikonal equation doesn't make perfect hyperplanes. First, we observed the characteristics of trilinear hypersurfaces as illustrated in Figure 6 in the Appendix. Among 64 edge scenarios within a trilinear region, a diagonal plane (<i>e.g.</i>, \(x=z\) intersects with the hypersurface in most cases. Moreover, we can take advantage of eliminating one variable by assuming the curved edge lies on the  diagonal plane. In this light, Theorem. 4.7 rearranges two trilinear equations to get the above solution. As we mentioned in the paper, the new vertices lie on at least two hypersurfaces, and the new edges exist on the same hypersurface, while the eikonal constraint minimizes any associated error. This error is tolerated by the hyperparameter \(\epsilon=10^{-4}\) <span class="reference">(Secion 6.1)</span> using the \(\epsilon\)-tolerate sign vector in Definition 3.4.
         </p>
-        <!--<p>
-          Figure 5 also suggests empirical evidence. Empirically, the flatness error, derived from the proof of Theorem 4.5, is effectively controlled by the learning rate of the eikonal loss. In the experiments, we used 0.01 to give our results, while many other neural implicit surface learning methods were used to exploit a higher learning rate of 0.1 <span class="reference">(<i>e.g.</i>, Yariv et al., 2023)</span>. Note that, in practice, the eikonal loss is only applied to near-surface using clamps (if the target position is obviously far from a surface, ignore it; it is wise since we are concerned with the surfaces, not wanting exact SDFs for all space) for effective learning, which is sufficient to our extraction method.
-        </p>-->
       </div>
     </div>
 
-      <!-- Visual Effects. -->
-      <!-- <div class="column">
-        <div class="content">
-          <h2 class="title is-3">Visual Effects</h2>
-          <p>
-            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
-            would be impossible without nerfies since it would require going through a wall.
-          </p>
-          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/dollyzoom-stacked.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-      </div> -->
-      <!--/ Visual Effects. -->
-
-      <!-- Matting. -->
-      <!-- <div class="column">
-        <h2 class="title is-3">Matting</h2>
-        <div class="columns is-centered">
-          <div class="column content">
-            <p>
-              As a byproduct of our method, we can also solve the matting problem by ignoring
-              samples that fall outside of a bounding box during rendering.
-            </p>
-            <video id="matting-video" controls playsinline height="100%">
-              <source src="./static/videos/matting.mp4"
-                      type="video/mp4">
-            </video>
-          </div>
-
-        </div>
-      </div> -->
-    <!-- </div> -->
-    <!--/ Matting. -->
-
-    <!-- Animation. 
     <div class="columns is-centered">
-      <div class="column is-full-width">
-        <h2 class="title is-3">Animation</h2> -->
-
-        <!-- Interpolating. -->
-        <!-- <h3 class="title is-4">Interpolating states</h3>
-        <div class="content has-text-justified">
-          <p>
-            We can also animate the scene by interpolating the deformation latent codes of two input
-            frames. Use the slider here to linearly interpolate between the left frame and the right
-            frame.
-          </p>
-        </div>
-        <div class="columns is-vcentered interpolation-panel">
-          <div class="column is-3 has-text-centered">
-            <img src="./static/images/interpolate_start.jpg"
-                 class="interpolation-image"
-                 alt="Interpolate start reference image."/>
-            <p>Start Frame</p>
-          </div>
-          <div class="column interpolation-video-column">
-            <div id="interpolation-image-wrapper">
-              Loading...
-            </div>
-            <input class="slider is-fullwidth is-large is-info"
-                   id="interpolation-slider"
-                   step="1" min="0" max="100" value="0" type="range">
-          </div>
-          <div class="column is-3 has-text-centered">
-            <img src="./static/images/interpolate_end.jpg"
-                 class="interpolation-image"
-                 alt="Interpolation end reference image."/>
-            <p class="is-bold">End Frame</p>
-          </div>
-        </div>
-        <br/> -->
-        <!--/ Interpolating. -->
-
-        <!-- Re-rendering. -->
-        <!-- <h3 class="title is-4">Re-rendering the input video</h3>
-        <div class="content has-text-justified">
-          <p>
-            Using <span class="dnerf">Nerfies</span>, you can re-render a video from a novel
-            viewpoint such as a stabilized camera by playing back the training deformations.
-          </p>
-        </div>
-        <div class="content has-text-centered">
-          <video id="replay-video"
-                 controls
-                 muted
-                 preload
-                 playsinline
-                 width="75%">
-            <source src="./static/videos/replay.mp4"
-                    type="video/mp4">
-          </video>
-        </div> -->
-        <!--/ Re-rendering. -->
-
-    <!--   </div>
-    </div> -->
-    <!--/ Animation. -->
-
+      <div class="column is-full-width content">
+        <h2 class="title is-3">Discussions</h2>
+        <h4>Q1. Is it possible to perfectly learn an SDF that fully satisfies the eikonal equation?</h4>
+        <p class="notification">
+          The above proof sketch of Theorem 4.7 describes the rationale behind our \(\epsilon\)-tolerate approach. Moreover, empirically, the flatness error (if it goes to zero, the hypersurface must be a plane), derived from the proof of Theorem 4.5, is effectively controlled by the learning rate of the eikonal loss. 
+          <br/><br/>
+          <!--In the experiments, we used 0.01 to give our results, while many other neural implicit surface learning methods were used to exploit a higher learning rate of 0.1 <span class="reference">(<i>e.g.</i>, Yariv et al., 2023)</span>.--> Note that, in practice, the eikonal loss could be applied to near-surface (if the target position is obviously far from a surface, ignore it; it is wise since we are concerned with the surfaces, not wanting exact SDFs for all space) for effective learning, which is sufficient to our extraction method.
+        </p>
+        <h4>Q2. What is the significance of tropical geometry analysis for the algorithm?</h4>
+        <p class="notification">
+          While Berzins (2023) did not explicitly mention it, the use of tropical geometry in deep neural networks <span class="reference">(Zhang et al., 2018)</span> allows us to mathematically describe each neuron's contribution as a folded hyperplane from a tropical geometry perspective. A key implication of this concept is that it facilitates for-loop iterations over neurons across layers in Algorithm 3, avoiding the need to visit each exponentially growing linear region.
+      </div>
+    </div>
 
     <!-- Concurrent Work. -->
     <div class="columns is-centered">
@@ -397,6 +308,10 @@
             </li>
             <li>
               Lei, J., & Jia, K. (2020). <i>Analytic Marching: An Analytic Meshing Solution from Deep Implicit Surface Networks.</i> <a href="https://proceedings.mlr.press/v119/lei20a.html">ICML</a>.
+            </li>
+            <li>
+              Zhang, L., Naitzat, G., & Lim, L. H. (2018). <i>Tropical Geometry of Deep Neural Networks.</i> <a href="http://proceedings.mlr.press/v80/zhang18i.html">ICML</a>.
+            </li>
           </ul>
         </div>
       </div>
