Fix font issues

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,14 @@
   <script>
   </script>
 
-  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Google+Sans:600|Noto+Sans|Castoro"
         rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/linux-libertine-o" rel="stylesheet">
 
   <link rel="stylesheet" href="./static/css/bulma.min.css">
   <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
   <!-- <link rel="stylesheet" href="./static/css/bulma-slider.min.css"> -->
-  <!-- <link rel="stylesheet" href="./static/css/fontawesome.all.min.css"> -->
+  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
