--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
       <div id="teaser1" class="column"></div>
     </div>
     <h2 class="subtitle has-text-centered">
-        Stanford Bunny and Dragon meshes by<br/>our analytical extraction from InstantNGP (Müller et al., 2022)
+        Stanford Bunny and Dragon meshes by<br/>our analytical extraction from InstantNGP <span class="reference">(Müller et al., 2022)</span>
     </h2>
   </div>
 </section>
