--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <img src="./assets/cd_results-Cc5AiuwD.svg#svgView(viewBox(0,0,380,240))" width="480" height="240"/>
           </div>
           <p>
-              Chamfer distances for the Stanford dragon varying the number of vertices and the model sizes. Given that our method extracts vertices from the intersection points of hypersurfaces, it enables parsimonious representations using the lower number of vertices having better CD. As depicted, ours are located in the lower-left region compared with the baselines. 
+              Chamfer distances (CD) for the Stanford dragon varying the number of vertices and the model sizes. Given that our method extracts vertices from the intersection points of hypersurfaces, it enables parsimonious representations using the lower number of vertices having better CD. As depicted, ours are located in the lower-left region compared with the baselines. 
           </p>
           <p>
               Our method inherently holds an advantage over MC in capturing optimal vertices and faces, especially in cases where the target surfaces exhibit planar characteristics. When dealing with curved surfaces, the smaller grid size of the <i>Large</i> model views a curved surface in a smaller interval, and it tends to approach the plane. From the plotting of <i>Small</i> to <i>Large</i>, our CDs (colored crosses) are decreasing to zero, consistently with better CEs, confirming this speculation. The complete results of the Large models for the Stanford 3D Scanning repository can be found in Tables 6 to 8 in Appendix F.
