--- a/src/index.html
+++ b/src/index.html
@@ -120,8 +120,8 @@
                 </a>
               </span> -->
               <!-- Code Link. -->
-              <span class="link-block disabled">
-                <a href="javascript:alert('TBA. Stay tuned!');"
+              <span class="link-block">
+                <a href="https://github.com/naver-ai/tropical-nerf.pytorch"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -353,10 +353,10 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{Kim2024tropical,
-  author = {Kim, Jin-Hwa},
-  title = {{Polyhedral Complex Derivation from Piecewise Trilinear Networks}},
-  journal = {arXiv preprint arXiv:2402.10403}
+    <pre><code>@inproceedings{kim2024tropical,
+  author = {{Kim, Jin-Hwa}},
+  booktitle = {Advances in Neural Information Processing Systems 37 (NeurIPS)},
+  title = {Polyhedral Complex Derivation from Piecewise Trilinear Networks},
   year = {2024}
 }</code></pre>
   </div>
